src/test/deca/syntax/invalid/lexer/chaines_bslash-lex.corr
INFO  fr.ensimag.deca.syntax.DecacErrorListner.syntaxError(DecacErrorListner.java:50) - no token, no LocationException => using input.getSourceName(): line=12
./src/test/deca/syntax/invalid/lexer/chaines_bslash.deca:12:0: token recognition error at: '"a\n'
